# circuit_canvas

./: .env.example  .gitignore  .vercelignore  README.md  _legacy_App.jsx  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
api/: digikey.js  ds2kicad.js  ezplm.js  gemini.js  kicadlib.js  suppliers.js
api/v1/eda-builder/: [...path].js
docs/: ARCHITECTURE.md  DEPLOY-VERCEL.md  EZPLM_INTEGRATION.md  eda-builder-api-contract.md  eda-builder-domain-model.md  eda-builder-implementation-plan.md  eda-builder-test-plan.md  eda-builder-ui-flow.md
public/: robots.txt  sitemap.xml
server/: package-lock.json  package.json
server/src/: data.js  index.js
services/eda-builder/: Dockerfile  README.md  pyproject.toml
services/eda-builder/app/: __init__.py  config.py  main.py
services/eda-builder/app/api/: errors.py  health.py  jobs.py  uploads.py
services/eda-builder/app/domain/: artifact.py  draft.py  job.py
services/eda-builder/app/pipeline/: __init__.py  planner.py
services/eda-builder/app/storage/: __init__.py  jobs.py
services/eda-builder/app/tests/: test_jobs_unittest.py
src/: App.tsx
src/config/: index.ts
src/design-core/: custom-lib.ts
src/design-core/__tests__/: core.test.ts
src/design-core/collision/: index.ts
src/design-core/document/: factory.ts  schema.ts  services.ts  types.ts
src/plugins/: registry.ts
src/providers/: factory.ts  suppliers.ts
src/shared/: i18n.ts  theme.ts
src/state/: designStore.ts  edaBuilderStore.ts
src/types/: occt-import-js.d.ts
(+67 files in other folders)
