[project]
name = "circuit-canvas-eda-builder"
version = "0.1.0"
description = "Circuit Canvas EDA Asset Builder service skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
